Add ArduinoCompat file to bridge missing Arduino Core library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Network)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Network)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -23,6 +23,9 @@ set(PROJECT_SOURCES
         z21header.h
         z21.h
         z21.cpp
+
+        arduinocompat.h
+        arduinocompat.cpp
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
@@ -48,7 +51,7 @@ else()
     endif()
 endif()
 
-target_link_libraries(QtZ21Server PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(QtZ21Server PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Network)
 
 set_target_properties(QtZ21Server PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
