Provide Arduino Core compatible headers
Added "WProgram.h" and "EEPROM.h" which are needed by Z21 Library

Theese new headers emulate only required functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,9 @@ set(PROJECT_SOURCES
 
         arduinocompat.h
         arduinocompat.cpp
+
+        WProgram.h
+        EEPROM.h
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
