MainWindow: use new PowerStatusLED and a combobox for power
- Set power with combobox
- Feedback with PowerStatusLED
- Make connections inside MainWindow::setupConnections()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,9 @@ set(PROJECT_SOURCES
         z21server.h
         z21server_constants.h
 
+        widgets/powerstatusled.h
+        widgets/powerstatusled.cpp
+
         arduino_compat/WProgram.h
         arduino_compat/EEPROM.h
         arduino_compat/arduinocompat.h
