Z21Server: support up to 1024 basic accessories
- AccessoryManager: new class to handle accessory state
- AccessoryModel: model wrapper for AccessoryManager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,11 @@ set(PROJECT_SOURCES
         server/retroaction/rbusinputmodel.h
         server/retroaction/rbusinputmodel.cpp
 
+        server/accessories/accessorymanager.h
+        server/accessories/accessorymanager.cpp
+        server/accessories/accessorymodel.h
+        server/accessories/accessorymodel.cpp
+
         widgets/powerstatusled.h
         widgets/powerstatusled.cpp
 
