Z21Server: add support for locomotives
- New LocoManager class to handle loco state
- New LocoDriveModel: model wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,11 @@ set(PROJECT_SOURCES
         server/accessories/accessorymodel.h
         server/accessories/accessorymodel.cpp
 
+        server/loco/locomanager.h
+        server/loco/locomanager.cpp
+        server/loco/locodrivemodel.h
+        server/loco/locodrivemodel.cpp
+
         widgets/powerstatusled.h
         widgets/powerstatusled.cpp
 
