--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ set(PROJECT_SOURCES
         server/loconet/loconetz21adapter.cpp
         server/loconet/loconetz21source.h
         server/loconet/loconetz21source.cpp
+        server/loconet/loconetbus.h
 
         widgets/powerstatusled.h
         widgets/powerstatusled.cpp
