LoconetSlotServer: new slot server
Initial locomotive drive on LocoNet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ set(PROJECT_SOURCES
         server/loconet/loconettcpsource.h
         server/loconet/loconettcpsource.cpp
         server/loconet/loconetbus.h
+        server/loconet/loconetslotserver.h
+        server/loconet/loconetslotserver.cpp
 
         widgets/powerstatusled.h
         widgets/powerstatusled.cpp
@@ -92,7 +94,7 @@ target_include_directories(Z21ServerEmulator PRIVATE z21library arduino_compat)
 # LocoNet support
 if(EXISTS ${LOCONET2_DIR})
     target_include_directories(Z21ServerEmulator PRIVATE ${LOCONET2_DIR})
-    target_compile_definitions(Z21ServerEmulator PRIVATE WITH_LOCONET2=1)
+    target_compile_definitions(Z21ServerEmulator PRIVATE WITH_LOCONET2=1 DEBUG_LN2_OUTPUT=1)
     target_sources(Z21ServerEmulator PRIVATE
         ${LOCONET2_DIR}/LocoNet2.cpp
         ${LOCONET2_DIR}/LocoNetMessageBuffer.cpp)
